[gd_scene load_steps=9 format=3 uid="uid://bsyoj8bj7psao"]

[ext_resource type="Script" path="res://player.gd" id="1_wgnjl"]
[ext_resource type="Script" path="res://camera.gd" id="2_sffrc"]
[ext_resource type="PackedScene" uid="uid://bnoa7xqtt1aar" path="res://XModel.tscn" id="2_svo74"]
[ext_resource type="Material" uid="uid://bpql3sd75orc6" path="res://TestMatX.tres" id="3_5uo7q"]

[sub_resource type="Environment" id="Environment_psn5d"]
background_color = Color(0.82327, 0.643309, 0.818932, 1)
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_gmcop"]

[sub_resource type="CylinderMesh" id="CylinderMesh_k8iq7"]
material = ExtResource("3_5uo7q")
height = 1.0
radial_segments = 4
rings = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dpwwd"]
shading_mode = 2
diffuse_mode = 3
specular_mode = 1
albedo_color = Color(0.253714, 0.43861, 0.396955, 1)

[node name="Node3D" type="Node3D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.764146, 0.365502, 0.531497, -0.582372, 0.745207, 0.324822, -0.277353, -0.55774, 0.782305, -1.55232, 1.8559, 1.74337)
shadow_enabled = true
shadow_opacity = 0.5
shadow_blur = 0.0
directional_shadow_mode = 0
directional_shadow_pancake_size = 0.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_psn5d")

[node name="Player" type="CharacterBody3D" parent="."]
floor_constant_speed = true
floor_snap_length = 0.25
script = ExtResource("1_wgnjl")
settings_camSensitivity = 0.17
settings_camSmooth = false
MAX_WALL_JUMP = 5
JUMP_WINDOW = 7
RUN_SPEED = 12.0
DASH_SPEED = 23.5
DASH_TIME = 25.0
JUMP_FORCE = 17

[node name="Collision" type="CollisionShape3D" parent="Player"]
shape = SubResource("CylinderShape3D_gmcop")

[node name="Model" type="Node3D" parent="Player"]

[node name="Mesh" type="MeshInstance3D" parent="Player/Model"]
skeleton = NodePath("../..")

[node name="Rig" parent="Player/Model/Mesh" instance=ExtResource("2_svo74")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="ph_arrow" type="CSGMesh3D" parent="Player/Model/Mesh"]
transform = Transform3D(0.400266, 0, 0, 0, -0.0145054, 0.341827, 0, -0.959623, -0.00516697, 0, 0.49277, 0.89483)
visible = false
mesh = SubResource("CylinderMesh_k8iq7")

[node name="WallFront" type="RayCast3D" parent="Player/Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.06145, 0.148495, 0.0530071)
target_position = Vector3(0, 0, 2)

[node name="CamRoot" type="Node3D" parent="Player"]
top_level = true
script = ExtResource("2_sffrc")

[node name="CamSpringArm" type="SpringArm3D" parent="Player/CamRoot"]
spring_length = 7.0
margin = 1.0

[node name="Cam" type="Camera3D" parent="Player/CamRoot/CamSpringArm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.30005)
fov = 50.0

[node name="Map" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, -2, 1.5)

[node name="CSGBox3D6" type="CSGBox3D" parent="Map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17.5, -17, -7.5)
use_collision = true
size = Vector3(640, 2, 751)
material = SubResource("StandardMaterial3D_dpwwd")

[node name="CSGBox3D4" type="CSGBox3D" parent="Map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -25, -4, 0.5)
use_collision = true
size = Vector3(5, 2, 6)

[node name="CSGBox3D3" type="CSGBox3D" parent="Map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17, -3.5, 9)
use_collision = true
size = Vector3(5, 2, 6)

[node name="CSGBox3D2" type="CSGBox3D" parent="Map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 4, 11.5)
use_collision = true
size = Vector3(9, 7, 18)

[node name="CSGBox3D5" type="CSGBox3D" parent="Map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -41, -6, 0)
use_collision = true
size = Vector3(16, 1, 18)

[node name="CSGBox3D5" type="CSGBox3D" parent="Map/CSGBox3D5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 12, 21)
use_collision = true
size = Vector3(16, 37, 18)

[node name="CSGBox3D5" type="CSGBox3D" parent="Map/CSGBox3D5/CSGBox3D5"]
transform = Transform3D(0.7, 0, 0, 0, 0.566025, -0.6, 0, 0.326795, 1.03923, 15, 6.62276, 17.8954)
use_collision = true
size = Vector3(16, 56, 18)

[node name="CSGBox3D7" type="CSGBox3D" parent="Map"]
transform = Transform3D(1, 0, 0, 0, 0.965926, -0.258819, 0, 0.258819, 0.965926, 0, 2, -17)
use_collision = true
size = Vector3(16, 1, 18)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Map/CSGBox3D7"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, -3.97022, -34.1356)
radius = 10.0
height = 54.0
sides = 6

[node name="CSGBox3D" type="CSGBox3D" parent="Map"]
use_collision = true
size = Vector3(16, 1, 18)

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="debugLabel" type="Label" parent="HUD"]
layout_mode = 0
offset_right = 125.0
offset_bottom = 35.0
text = "sample text"

[editable path="Player/Model/Mesh/Rig"]
